Fixed Scroll bug on Mobile devices.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -105,7 +105,8 @@ ol.navbar a:hover{
 	body{
 		background-position: center;
 		background-attachment: scroll;
-		overflow: hidden;
+		overflow-x: hidden;
+		overflow-y: auto;
 	}
 
 	#octopus{
